--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,14 +1,19 @@
 .nav-menus-wrapper {
   display: flex;
   padding: 20px 10px;
-  border-bottom: 1px solid;
 }
 
 .nav-item-wrapper {
   margin-right: 20px;
+  padding: 10px;
 }
 
 .nav-item-wrapper:hover {
   color: orange;
   cursor: pointer;
+}
+
+.selected {
+  border-bottom: 2px solid orange;
+  transition: border-bottom 0.5s;
 }
